修正readme，完善环境配置相关设置